# LP2

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
config/: global_config.yaml
config/method_configs/: project_config_LP2.yaml  project_config_LP2_instance.yaml
config/scene_configs/: scene_config_home.yaml  scene_config_office.yaml
scripts/: download_data.py  visualize_all.py
src/lhmp/: __init__.py  dataset.py  evaluation.py  main.py  pipeline.py
src/lhmp/modules/goal/: goal_module_base.py  llm.py  llm_LP2.py  llm_LP2_instance.py
src/lhmp/modules/goal/prompt_templates/LP2/: current_interaction_remaining.txt  environment_description_withoutrooms.txt  instructions.txt  instructions_withactions.txt  previous_interactions.txt  previous_interactions_withactions.txt
src/lhmp/modules/goal/prompt_templates/LP2_instance/: current_interaction_remaining.txt  environment_description_withrooms.txt  instructions_withactions.txt
src/lhmp/modules/low_level/: low_level_ctmc.py  low_level_module_base.py
src/lhmp/modules/planning/: planning_LP2.py  planning_module_base.py
src/lhmp/utils/: data.py  dsg.py  general.py  language.py  math.py  method.py  visualization.py
