[build-system]
requires = ["setuptools"]

[project]
name = "lp2"
authors = [
    {name = "Nicolas Gorlo", email = "ngorlo@mit.edu"},
    {name = "Lukas Schmid", email = "lschmid@mit.edu"},
    {name = "Luca Carlone", email = "lcarlone@mit.edu"}
]
description = "LP2: Language-based Probabilistic Long-Term Prediction"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.urls]
Source = "https://github.com/MIT-SPARK/LP2"
Tracker = "https://github.com/MIT-SPARK/LP2/issues"

[tool.setuptools.packages.find]
where = ["src"]
